[package]
name = "orange_networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orange_networking_derive = {path = "../orange_networking_derive"}
log = "0.4"
byteorder = "1"
# num_enum = "0.5.10"
# num-derive = "0.3.3"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }

[features]
# default_features = ["packet_id_size_u8"]
no_delay = []
non_blocking_reads = []
# packet_id_size_u8 = []
# packet_id_size_u16 = ["packet_id_size_u8"]
# packet_id_size_u32 = ["packet_id_size_u16", "packet_id_size_u8"]
